[package]
name = "grouped_topo_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6.2"
itertools = "0.10.5"
graphalgs = {git = "https://github.com/starovoid/graphalgs" }
rand = { version = "0.8.5", features = [ "small_rng" ] }
enum-as-inner = "0.5.1"
