[package]
name = "grouped_topo_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6.2"
itertools = "0.10.5"
graphalgs = "0.1.1"
rand = { version = "0.8.5", features = [ "small_rng" ] }
enum-as-inner = "0.5.1"
permute = "0.2.1"
arbitrary = { version = "1", optional = true, features = ["derive"] } # todo: arbitrary could be a dev-dependency

[profile.release]
debug = true


[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "grouped_topo_sort"
path = "src/bin.rs"
